--- a/tes.html
+++ b/tes.html
@@ -36,7 +36,7 @@
     color: white;
     padding: 10px;
     text-align: center;
-    font-size: 14px;
+    font-size: 20px;
   }
 
   td {
@@ -78,7 +78,7 @@
 </head>
 <body>
 
-<h2>📊 Monitoring Produksi Realtime</h2>
+<h2>📊 Monitoring Packing Topper</h2>
 
 <div class="status" id="status">⏳ Memuat data...</div>
 
@@ -86,7 +86,7 @@
   <table id="dataTable">
     <thead>
       <tr>
-        <th>Line</th>
+        <th>LINE</th>
         <th>09:00</th>
         <th>10:00</th>
         <th>11:00</th>
@@ -98,7 +98,7 @@
         <th>18:00</th>
         <th>19:30</th>
         <th>AVG</th>
-        <th>Total</th>
+        <th>TOTAL</th>
       </tr>
     </thead>
     <tbody id="tableBody">
@@ -152,3 +152,4 @@ setInterval(loadSheetData, 30000);
 
 </body>
 </html>
+
