--- a/tes.html
+++ b/tes.html
@@ -15,7 +15,7 @@
     background: #1976d2;
     color: white;
     padding: 10px 0;
-    font-size: 22px;
+    font-size: 30px;
     font-weight: bold;
     text-align: center;
     overflow: hidden;
@@ -23,7 +23,7 @@
   }
 
   h2 {
-    text-align: center;
+    text-align: Left;
     color: #333;
     margin: 30px 0 10px;
   }
@@ -100,14 +100,13 @@
 <!-- === TEKS BERJALAN === -->
 <div class="marquee">
   <marquee behavior="scroll" direction="left" scrollamount="6">
-    📊 Hourly Monitoring Packing Topper dan Packing Foam 📦
+    Hourly Monitoring Packing Topper dan Packing Foam
   </marquee>
 </div>
 
-<div class="status" id="status">⏳ Memuat data...</div>
-
 <!-- === TABEL TOPPER === -->
-<h2>📦 Monitoring Packing TOPPER</h2>
+<h2>Shift 1</h2>
+  <br><h2>Topper Mattress</h2>
 <div class="container">
   <table id="tableTopper">
     <thead>
@@ -211,3 +210,4 @@ setInterval(loadSheetData, 30000);
 
 </body>
 </html>
+
