--- a/tes.html
+++ b/tes.html
@@ -68,18 +68,6 @@
     color: #666;
   }
 
-  .status {
-    position: fixed;
-    top: 15px;
-    right: 20px;
-    font-size: 13px;
-    color: #444;
-    background: #fff;
-    border-radius: 8px;
-    padding: 6px 10px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  }
-
   .loading {
     text-align: center;
     padding: 20px;
@@ -90,8 +78,15 @@
     text-align: center;
     font-size: 20px;
     color: #333;
-    margin: 25px 0;
+    margin: 25px 0 5px;
     font-weight: 500;
+  }
+
+  .status {
+    text-align: center;
+    font-size: 14px;
+    color: #444;
+    margin-bottom: 25px;
   }
 </style>
 </head>
@@ -103,7 +98,6 @@
     📊 Hourly Monitoring Packing Topper dan Packing Foam 📦
   </marquee>
 </div>
-
 
 <!-- === TABEL TOPPER === -->
 <h2>📦 Monitoring Packing TOPPER</h2>
@@ -139,9 +133,9 @@
   <div class="footer">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- === JAM & TANGGAL === -->
+<!-- === JAM & STATUS PEMBARUAN === -->
 <div class="clock" id="clock">🕒 Memuat jam...</div>
-  <div class="status" id="status">⏳ Memuat data...</div>
+<div class="status" id="status">⏳ Memuat data...</div>
 
 <script>
 const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTo_FFsfIx50Tgyzo2JZneIQtNBfIpP6eJ-KhzS1qenNIqy7rjmMaE1h1H5X2e_-7jdCbcwq6wdk5oL/pub?gid=773938712&single=true&output=csv";
@@ -160,7 +154,7 @@ async function loadSheetData() {
     topperBody.innerHTML = "";
     foamBody.innerHTML = "";
 
-    // Baris 2–6 untuk Topper, baris 8–12 untuk Foam (ubah sesuai posisi datamu di Sheet)
+    // Baris data disesuaikan
     const topperRows = rows.slice(1, 4);
     const foamRows = rows.slice(7, 12);
 
@@ -211,4 +205,3 @@ setInterval(loadSheetData, 30000);
 
 </body>
 </html>
-
