--- a/tes.html
+++ b/tes.html
@@ -72,13 +72,14 @@
     border-bottom-right-radius: 10px;
   }
 
-  /* === KHUSUS UNTUK TABEL TOTAL === */
+ /* === KHUSUS UNTUK TABEL TOTAL === */
 .total-container {
-  width: 350px;              /* kecil dan ringkas */
-  margin: 20px 0 30px 2.5%;  /* kiri bawah */
+  width: 40%;                /* lebih kecil tapi masih sejajar */
+  margin: 20px auto 40px;    /* auto kiri-kanan agar sejajar dengan container di atas */
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0,0,0,0.1);
   background: white;
+  padding: 0;
 }
 
 .total-container table {
@@ -94,7 +95,7 @@
 }
 
 .total-container th {
-  background: #2e7d32; /* hijau tua */
+  background: #2e7d32;
   color: white;
 }
 
@@ -285,4 +286,5 @@ setInterval(loadSheetData, 30000);
 
 </body>
 </html>
+
 
