--- a/tes.html
+++ b/tes.html
@@ -75,7 +75,7 @@
  /* === KHUSUS UNTUK TABEL TOTAL === */
 .total-container {
   width: 40%;                /* lebih kecil tapi masih sejajar */
-  margin: 20px auto 40px;    /* auto kiri-kanan agar sejajar dengan container di atas */
+  margin: 20px 0 40px 2.5%;   /* auto kiri-kanan agar sejajar dengan container di atas */
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0,0,0,0.1);
   background: white;
@@ -286,5 +286,6 @@ setInterval(loadSheetData, 30000);
 
 </body>
 </html>
+
 
 
