--- a/tes.html
+++ b/tes.html
@@ -151,7 +151,7 @@
 </div>
 
 <!-- === TABEL TOPPER === -->
-<h2>📦 Monitoring Packing TOPPER</h2>
+<h2>TOPPER Mattress Target 90 Pcs/Jam</h2>
 <div class="container">
   <table id="tableTopper">
     <thead>
@@ -168,7 +168,7 @@
 </div>
 
 <!-- === TABEL FOAM === -->
-<h2>🧱 Monitoring Packing FOAM</h2>
+<h2>FOAM Mattress Target 75 Pcs/Jam</h2>
 <div class="container">
   <table id="tableFoam">
     <thead>
@@ -284,6 +284,7 @@ setInterval(loadSheetData, 30000);
 
 </body>
 </html>
+
 
 
 
