--- a/tes.html
+++ b/tes.html
@@ -16,7 +16,7 @@
     background: #1976d2;
     color: white;
     padding: 10px 0;
-    font-size: 22px;
+    font-size: 30px;
     font-weight: bold;
     text-align: center;
     overflow: hidden;
@@ -146,13 +146,14 @@
 <!-- === TEKS BERJALAN === -->
 <div class="marquee">
   <marquee behavior="scroll" direction="left" scrollamount="6">
-    📊 Hourly Monitoring Packing Topper dan Packing Foam 📦
+    HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING
   </marquee>
 </div>
 
 <!-- === TABEL TOPPER === -->
-<h2>TOPPER Mattress Target 90 Pcs/Jam</h2>
+
 <div class="container">
+  <h2>TOPPER Mattress Target 90 Pcs/Jam</h2>
   <table id="tableTopper">
     <thead>
       <tr>
@@ -284,6 +285,7 @@ setInterval(loadSheetData, 30000);
 
 </body>
 </html>
+
 
 
 
