--- a/tes.html
+++ b/tes.html
@@ -109,7 +109,7 @@
   }
 
   .clock {
-    text-align: center;
+    text-align: right;
     font-size: 20px;
     color: #333;
     margin: 25px 0 5px;
@@ -153,7 +153,7 @@
 <!-- === TABEL TOPPER === -->
 
 <div class="container">
-  <h2>TOPPER Mattress Target 90 Pcs/Jam</h2>
+  <h2>TOPPER Mattress Target : 90 Pcs/Jam</h2>
   <table id="tableTopper">
     <thead>
       <tr>
@@ -169,8 +169,9 @@
 </div>
 
 <!-- === TABEL FOAM === -->
-<h2>FOAM Mattress Target 75 Pcs/Jam</h2>
+
 <div class="container">
+  <h2>FOAM Mattress Target : 75 Pcs/Jam</h2>
   <table id="tableFoam">
     <thead>
       <tr>
@@ -198,12 +199,12 @@
     </tbody>
   </table>
 </div>
-  </div>
-
-
+  
 <!-- === JAM & STATUS PEMBARUAN === -->
 <div class="clock" id="clock">🕒 Memuat jam...</div>
 <div class="status" id="status">⏳ Memuat data...</div>
+  </div>
+
 
 <script>
 const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTo_FFsfIx50Tgyzo2JZneIQtNBfIpP6eJ-KhzS1qenNIqy7rjmMaE1h1H5X2e_-7jdCbcwq6wdk5oL/pub?gid=773938712&single=true&output=csv";
@@ -285,6 +286,7 @@ setInterval(loadSheetData, 30000);
 
 </body>
 </html>
+
 
 
 
