--- a/tes.html
+++ b/tes.html
@@ -109,8 +109,8 @@
   }
 
   .clock {
-    text-align: right;
-    font-size: 20px;
+    text-align: center;
+    font-size: 25px;
     color: #333;
     margin: 25px 0 5px;
     font-weight: 500;
@@ -286,6 +286,7 @@ setInterval(loadSheetData, 30000);
 
 </body>
 </html>
+
 
 
 
