--- a/tes.html
+++ b/tes.html
@@ -74,7 +74,7 @@
 
  /* === KHUSUS UNTUK TABEL TOTAL === */
 .total-container {
-  width: 40%;                /* lebih kecil dari tabel utama */
+  width: 20%;                /* lebih kecil dari tabel utama */
   margin: 20px 0 40px 0;     /* auto sejajar dengan tabel utama */
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0,0,0,0.1);
@@ -94,7 +94,7 @@
 }
 
 .total-container th {
-  background: #2e7d32; /* hijau tua */
+  background: #1976d2;
   color: white;
 }
 
@@ -110,7 +110,7 @@
 
   .clock {
     text-align: center;
-    font-size: 25px;
+    font-size: 20px;
     color: #333;
     margin: 25px 0 5px;
     font-weight: 500;
@@ -286,6 +286,7 @@ setInterval(loadSheetData, 30000);
 
 </body>
 </html>
+
 
 
 
