--- a/tes.html
+++ b/tes.html
@@ -75,8 +75,8 @@
   /* === KHUSUS UNTUK TABEL TOTAL === */
   .total-wrapper {
     display: flex;
-    justify-content: center;
-    gap: 20px;
+    justify-content: flex-start;
+    gap: 40px;
     flex-wrap: wrap;
     margin: 20px auto 40px;
     max-width: 1200px;
@@ -303,4 +303,5 @@ setInterval(loadSheetData, 30000);
 
 </body>
 </html>
+
 
