--- a/tes.html
+++ b/tes.html
@@ -72,44 +72,41 @@
     border-bottom-right-radius: 10px;
   }
 
-  /* === KHUSUS UNTUK TABEL TOTAL === */
+  /* === TABEL TOTAL KECIL DI KIRI === */
   .total-wrapper {
     display: flex;
     justify-content: flex-start;
-    gap: 40px;
-    flex-wrap: wrap;
-    margin: 20px auto 40px;
-    max-width: 1200px;
+    gap: 20px;
+    margin: 20px 0 40px 3%;
   }
 
-  .total-container {
-    flex: 1;
-    min-width: 280px;
+  .total-box {
     background: white;
     border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     overflow: hidden;
+    width: 180px;
   }
 
-  .total-container table {
+  .total-box table {
     width: 100%;
     border-collapse: collapse;
   }
 
-  .total-container th,
-  .total-container td {
-    font-size: 20px;
-    padding: 10px;
-    text-align: center;
-  }
-
-  .total-container th {
+  .total-box th {
     background: #1976d2;
     color: white;
+    font-size: 18px;
+    padding: 10px;
   }
 
-  .total-container tr:nth-child(even) { background-color: #f9f9f9; }
-  .total-container tr:hover { background-color: #e8f5e9; }
+  .total-box td {
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+    padding: 10px;
+    color: #333;
+  }
 
   .loading {
     text-align: center;
@@ -133,20 +130,11 @@
   }
 
   @media (max-width: 600px) {
-    .marquee {
-      font-size: 16px;
-      padding: 8px 0;
-    }
-    th, td {
-      font-size: 13px;
-      padding: 6px 4px;
-    }
-    h2 {
-      font-size: 18px;
-    }
-    .clock {
-      font-size: 16px;
-    }
+    .marquee { font-size: 16px; padding: 8px 0; }
+    th, td { font-size: 13px; padding: 6px 4px; }
+    h2 { font-size: 18px; }
+    .clock { font-size: 16px; }
+    .total-wrapper { flex-direction: column; align-items: flex-start; margin-left: 5%; }
   }
 </style>
 </head>
@@ -193,23 +181,19 @@
   <div class="footer">Auto-refresh setiap 30 detik</div>
 </div>
 
-<!-- === TABEL TOTAL DALAM 1 BARIS === -->
+<!-- === DUA TABEL TOTAL KECIL === -->
 <div class="total-wrapper">
-  <div class="total-container">
+  <div class="total-box">
     <table id="tableTotalTopper">
       <thead><tr><th>TOTAL TOPPER</th></tr></thead>
-      <tbody id="bodyTotalTopper">
-        <tr><td class="loading">Menunggu data...</td></tr>
-      </tbody>
+      <tbody id="bodyTotalTopper"><tr><td>0</td></tr></tbody>
     </table>
   </div>
 
-  <div class="total-container">
+  <div class="total-box">
     <table id="tableTotalFoam">
       <thead><tr><th>TOTAL FOAM</th></tr></thead>
-      <tbody id="bodyTotalFoam">
-        <tr><td class="loading">Menunggu data...</td></tr>
-      </tbody>
+      <tbody id="bodyTotalFoam"><tr><td>0</td></tr></tbody>
     </table>
   </div>
 </div>
@@ -240,10 +224,9 @@ async function loadSheetData() {
     totalTopperBody.innerHTML = "";
     totalFoamBody.innerHTML = "";
 
+    // Ambil data utama
     const topperRows = rows.slice(1, 4);
     const foamRows = rows.slice(7, 12);
-    const totalTopperRow = rows[14];
-    const totalFoamRow = rows[16];
 
     topperRows.forEach(row => {
       const tr = document.createElement("tr");
@@ -265,15 +248,23 @@ async function loadSheetData() {
       foamBody.appendChild(tr);
     });
 
+    // === TOTAL TOPPER (baris 13, kolom B) ===
+    const totalTopperRow = rows[13];
     if (totalTopperRow) {
       const tr = document.createElement("tr");
-      tr.innerHTML = `<td>${totalTopperRow[0]}</td>`;
+      const td = document.createElement("td");
+      td.textContent = totalTopperRow[1];
+      tr.appendChild(td);
       totalTopperBody.appendChild(tr);
     }
 
+    // === TOTAL FOAM (baris 14, kolom B) ===
+    const totalFoamRow = rows[14];
     if (totalFoamRow) {
       const tr = document.createElement("tr");
-      tr.innerHTML = `<td>${totalFoamRow[0]}</td>`;
+      const td = document.createElement("td");
+      td.textContent = totalFoamRow[1];
+      tr.appendChild(td);
       totalFoamBody.appendChild(tr);
     }
 
@@ -296,12 +287,8 @@ function updateClock() {
 
 setInterval(updateClock, 1000);
 updateClock();
-
 loadSheetData();
 setInterval(loadSheetData, 30000);
 </script>
-
 </body>
 </html>
-
-
