--- a/tes.html
+++ b/tes.html
@@ -235,6 +235,14 @@ async function loadSheetData() {
         const td = document.createElement("td");
         td.textContent = cell;
         td.style.fontWeight = "bold";
+            if (index > 0) {
+      const value = parseFloat(cell);
+      if (!isNaN(value) && value < 90 && value > 0) {
+        td.style.backgroundColor = "#ffcccc"; // merah muda
+        td.style.fontWeight = "bold";
+        td.style.color = "#a80000"; // teks merah gelap
+      }
+    }
         tr.appendChild(td);
       });
       topperBody.appendChild(tr);
@@ -246,6 +254,14 @@ async function loadSheetData() {
         const td = document.createElement("td");
         td.textContent = cell;
         td.style.fontWeight = "bold";
+            if (index > 0) {
+      const value = parseFloat(cell);
+      if (!isNaN(value) && value < 75 && value > 0) {
+        td.style.backgroundColor = "#ffcccc"; // merah muda
+        td.style.fontWeight = "bold";
+        td.style.color = "#a80000"; // teks merah gelap
+      }
+    }
         tr.appendChild(td);
       });
       foamBody.appendChild(tr);
@@ -291,5 +307,6 @@ setInterval(loadSheetData, 30000);
 </script>
 </body>
 </html>
+
 
 
